fix: spinner being hard to read inside buttons

--- a/ui/src/components/Spinner.module.scss
+++ b/ui/src/components/Spinner.module.scss
@@ -30,6 +30,10 @@
   animation: octDotFade 1.8s linear infinite;
 }
 
+button .label {
+  color: var(--oct-text-light);
+}
+
 .label {
   color: var(--oct-muted);
 }
