--- a/ui/src/styles/global.scss
+++ b/ui/src/styles/global.scss
@@ -8,6 +8,7 @@
   --oct-yellow: rgb(251, 200, 123);
 
   --oct-text: rgb(34, 34, 34);
+  --oct-text-light: rgb(240, 240, 240);
   --oct-muted: rgb(107, 107, 107);
   --oct-border: rgba(0, 0, 0, 0.08);
   --oct-bg: rgb(255, 255, 255);
